2005-12-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-fb.el: Don't require w3m.
	(w3m-fb-frame-parameter): Always define.
	(w3m-fb-delete-frame-functions): Ditto.
	(w3m-fb-select-buffer): Fix the 2nd clause of cond.
	(w3m-fb-advised-functions): Remove.
	(w3m-list-buffers): Move advice code to w3m-fb.el.
	(w3m-close-window): Move advice code to w3m.el.
	(w3m-delete-buffer): Ditto.
	(w3m-quit): Ditto.
	(w3m-fb-mode): Remove w3m-fb-advised-functions stuff.

	* w3m.el (w3m-fb): Require.
	(w3m-delete-buffer, w3m-quit, w3m-close-window): Merge the codes
	which were formerly provided as advices in w3m-fb.el.

	* w3m-util.el (w3m-fb-list-buffers-frame, w3m-fb-mode): Bind them
	when compiling.
	(w3m-fb-frame-parameter): Autoload.
	(w3m-list-buffers): Merge the code which was formerly provided as
	an advice in w3m-fb.el.

2005-11-26  Matt Hodges  <MPHodges@member.fsf.org>

	* w3m-fb.el: New file.

2005-12-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-make-regexp): Improve regexp.
	(shimbun-asahi-group-table): Ditto.

2005-12-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-form.el (w3m-form-submit): Use the post method for the
	multipart/form-data enctype according to the proposal of RFC2070
	even if the form specifies the get method.

2005-11-24  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m-form.el (w3m-form-submit): If anchor exists, go to the uri.

2005-11-21  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* w3m-favicon.el (w3m-favicon-type): Renew default image type
	list.

2005-11-21  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-rss.el (shimbun-rss-get-headers): If id is nil,
	ignore that URL for creating header.
	(shimbun-rss-build-message-id): Fix Docstring for new interface
	behavior.

	* shimbun/sb-excite.el (shimbun-rss-build-message-id): If URL is
	advertisement, return nil.

2005-11-19  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* w3m.el (w3m-menubar): Renew enable/disable condition for `[Copy